--- a/_includes/post.html
+++ b/_includes/post.html
@@ -1,7 +1,10 @@
 ---
 layout: 'base.html'
+eleventyComputed:
+    title: "{{ page.date | timezonedDate(page.gps) }}"
+    date: "{{ page.date | urlDate | slugify }}"
+    og: "https://screenshot.henry.codes/{{ ('https://stillness.digital/opengraph/posts/' + date) | encodeURIComponent }}/opengraph"
 ---
-
 <main>
     <article>
         <time>{{ page.date | timezonedDate(page.gps) }}</time>
