🫠 - Headless browser compatibility lol

--- a/_includes/og.html
+++ b/_includes/og.html
@@ -93,6 +93,7 @@
         white-space: pre-line;
         text-overflow: ellipsis;
         mask-image: linear-gradient(hsl(0, 0%, 0%), transparent);
+        -webkit-mask-image: linear-gradient(hsl(0, 0%, 0%), transparent);
       }
     </style>
   </head>
