🗺 - Fix geolocation and move CSS to files

--- a/_includes/base.html
+++ b/_includes/base.html
@@ -62,238 +62,7 @@
     {% else %}
       <meta property="og:image:type" content="image/jpg" />
     {% endif %}
-
-    <style>
-      @font-face {
-        font-family: "Ninna";
-        font-weight: normal;
-        font-style: normal;
-        font-display: swap;
-        src: url("/ninna.woff2") format("woff2");
-      }
-
-      @font-face {
-        font-family: "DM Mono";
-        font-weight: normal;
-        font-style: normal;
-        font-display: swap;
-        src: url("/dm-mono.woff2");
-      }
-
-      @font-face {
-        font-family: "DM Mono";
-        font-weight: normal;
-        font-style: italic;
-        font-display: swap;
-        src: url("/dm-mono-italic.woff2");
-      }
-
-      * {
-        box-sizing: border-box;
-      }
-
-      body {
-        font-family: "Ninna";
-        display: grid;
-        justify-items: center;
-        min-height: 100vh;
-        margin: 0;
-        padding-top: 8rem;
-        padding-bottom: 8rem;
-        animation: drift 30s linear infinite;
-        color: hsl(0, 0%, 1%);
-        background-color: hsl(0, 0%, 96%);
-        background-image: url("/gradient.jpg");
-        background-attachment: fixed;
-        background-size: cover;
-
-        -webkit-font-smoothing: antialiased;
-        -moz-osx-font-smoothing: grayscale;
-      }
-
-      @keyframes drift {
-        from {
-          background-position-x: 0;
-        }
-
-        to {
-          background-position-x: 100vw;
-        }
-      }
-
-      ::selection {
-        background-color: hsla(249, 33%, 88%, 40%);
-      }
-
-      h1 {
-        font-size: clamp(2.3rem, 9vw, 3.8rem);
-        font-weight: normal;
-        line-height: 1.1;
-        max-width: 18ch;
-        text-align: center;
-        text-transform: uppercase;
-        color: hsl(0, 0%, 1%);
-      }
-
-      h1:first-letter {
-        font-feature-settings: "swsh";
-      }
-
-      h1 em {
-        font-style: normal;
-        font-feature-settings: "ss07", "ss12";
-        color: hsl(0, 0%, 100%);
-      }
-
-      a {
-        position: relative;
-        color: inherit;
-      }
-      .decorated:before {
-        position: absolute;
-        left: -1.25rem;
-        display: block;
-        content: "✍";
-      }
-
-      p {
-        max-width: 22ch;
-        padding: 1rem;
-        text-align: center;
-      }
-
-      aside {
-        font-size: 4rem;
-        font-feature-settings: "ss14";
-        color: hsl(0, 0%, 100%);
-      }
-
-      main {
-        margin-top: 5rem;
-      }
-
-      article {
-        font-family: "DM Mono";
-        font-size: 0.85rem;
-        max-width: 50ch;
-        margin-bottom: 3rem;
-        padding-inline: 1rem;
-        text-align: justify;
-      }
-
-      article:not(:last-child):after {
-        font-family: "Ninna";
-        font-size: 3rem;
-        font-feature-settings: "ss14";
-        display: block;
-        content: "&";
-        text-align: center;
-        color: hsl(0, 0%, 100%);
-      }
-
-      time {
-        font-size: 0.85rem;
-        display: block;
-        margin-bottom: 2rem;
-        text-align: left;
-        text-transform: lowercase;
-      }
-
-      pre {
-        font-family: inherit;
-        font-size: 0.85rem;
-        margin-top: 0;
-        margin-bottom: 2rem;
-        white-space: pre-line;
-      }
-      pre ~ a {
-        display: inline-block;
-        margin-bottom: 2rem;
-      }
-      pre ~ address {
-        display: inline-block;
-        margin-bottom: 3rem;
-      }
-      pre ~ address:before {
-        padding-right: 1.5ch;
-        content: "❦";
-      }
-
-      form {
-        font-family: "DM Mono";
-        font-size: 1.25rem;
-        position: absolute;
-        top: 0;
-        right: 0;
-        left: 0;
-        overflow: hidden;
-        height: 100vh;
-      }
-
-      textarea {
-        font: inherit;
-        width: 100%;
-        height: 100vh;
-        min-height: 10em;
-        padding: 1.5rem;
-        border: none;
-        outline: none;
-      }
-
-      label {
-        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-          Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
-          "Segoe UI Symbol";
-      }
-
-      label > div {
-        margin-bottom: 0.5rem;
-      }
-
-      input {
-        font: inherit;
-        border: none;
-        border-bottom: 1px solid currentColor;
-        border-radius: 0;
-        background-color: transparent;
-      }
-
-      input:focus {
-        outline: none;
-      }
-
-      button {
-        font: inherit;
-        position: absolute;
-        z-index: 2;
-        right: 1.5rem;
-        bottom: 1.5rem;
-        padding: 0.25rem 0.5rem;
-        cursor: pointer;
-        color: inherit;
-        border: 1px solid currentColor;
-        background-color: transparent;
-      }
-
-      button:hover,
-      button:active {
-        color: hsl(40, 8%, 71%);
-        border-color: hsl(0, 0%, 1%);
-        background-color: hsl(0, 0%, 1%);
-      }
-
-      .secret {
-        position: absolute;
-        overflow: hidden;
-        clip: rect(0 0 0 0);
-        width: 1px;
-        height: auto;
-        margin: 0;
-        padding: 0;
-        white-space: nowrap;
-        border: 0;
-      }
-    </style>
+    <link rel="stylesheet" href="/style.css">
   </head>
 
   <body>
