--- a/_includes/og.html
+++ b/_includes/og.html
@@ -5,97 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <style>
-      @font-face {
-        font-family: "Ninna";
-        font-weight: normal;
-        font-style: normal;
-        font-display: swap;
-        src: url("/ninna.woff2") format("woff2");
-      }
-
-      @font-face {
-        font-family: "DM Mono";
-        font-weight: normal;
-        font-style: normal;
-        font-display: swap;
-        src: url("/dm-mono.woff2");
-      }
-
-      @font-face {
-        font-family: "DM Mono";
-        font-weight: normal;
-        font-style: italic;
-        font-display: swap;
-        src: url("/dm-mono-italic.woff2");
-      }
-
-      * {
-        box-sizing: border-box;
-      }
-
-      body {
-        position: relative;
-        min-height: 100vh;
-        margin: 0;
-        color: hsl(0, 0%, 1%);
-        background-color: hsl(0, 0%, 96%);
-        background-image: url("/gradient.jpg");
-        background-attachment: fixed;
-        background-size: cover;
-
-        -webkit-font-smoothing: antialiased;
-        -moz-osx-font-smoothing: grayscale;
-      }
-      body:before {
-        position: absolute;
-        z-index: 1;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
-        display: block;
-        content: "";
-        border: 1.5rem solid hsl(0, 0%, 96%);
-      }
-      main {
-        position: absolute;
-        top: calc(50% - 5rem);
-        left: 4rem;
-      }
-      h1 {
-        font-family: "Ninna";
-        font-size: 5rem;
-        font-weight: normal;
-        font-feature-settings: "ss13" on, "ss07" on;
-        line-height: 1.1;
-        margin-top: 0;
-        margin-bottom: 0;
-        text-transform: uppercase;
-        color: hsl(0, 0%, 96%);
-      }
-
-      h2 {
-        font-family: "DM Mono";
-        font-size: 1.5rem;
-        font-weight: normal;
-        margin-bottom: 3rem;
-        text-transform: lowercase;
-      }
-
-      pre {
-        font-family: "DM Mono";
-        font-size: 1.5rem;
-        max-width: 50ch;
-        height: 10rem;
-        margin-top: 0;
-        margin-bottom: 2rem;
-        white-space: pre-line;
-        text-overflow: ellipsis;
-        mask-image: linear-gradient(hsl(0, 0%, 0%), transparent);
-        -webkit-mask-image: linear-gradient(hsl(0, 0%, 0%), transparent);
-      }
-    </style>
+    <link rel="stylesheet" href="/og.css">
   </head>
   <body>
     <main>{{ content | safe }}</main>
