--- a/style.css
+++ b/style.css
@@ -26,6 +26,10 @@
   box-sizing: border-box;
 }
 
+html:focus-within {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: "Ninna";
   display: grid;
@@ -106,6 +110,37 @@ main {
   margin-top: 5rem;
 }
 
+nav {
+  display: none;
+  position: sticky;
+  align-self: start;
+  top: 5rem;
+  font-family: "DM Mono";
+  font-size: 0.85rem;
+}
+nav > ol {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+nav li {
+  margin-bottom: 0.5em;
+}
+nav a {
+  text-decoration: none;
+  opacity: 0.5;
+}
+
+nav a:hover,
+nav a:active {
+  text-decoration: underline;
+  opacity: 1;
+}
+
+nav time {
+  margin: 0;
+}
+
 article {
   font-family: "DM Mono";
   font-size: 0.85rem;
@@ -113,6 +148,7 @@ article {
   margin-bottom: 3rem;
   padding-inline: 1rem;
   text-align: justify;
+  scroll-margin-top: 5rem;
 }
 
 article:not(:last-child):after {
@@ -237,4 +273,15 @@ form > button {
   padding: 0;
   white-space: nowrap;
   border: 0;
+}
+
+@media (min-width: 711px) {
+  main {
+    display: grid;
+    grid-template-columns: 1fr auto 1fr;
+    grid-column-gap: 3rem;
+  }
+  nav {
+    display: block;
+  }
 }
