--- a/style.css
+++ b/style.css
@@ -276,7 +276,7 @@ form > button {
 }
 
 @media (min-width: 711px) {
-  main {
+  main.home {
     display: grid;
     grid-template-columns: 1fr auto 1fr;
     grid-column-gap: 3rem;
