--- a/_includes/base.html
+++ b/_includes/base.html
@@ -32,7 +32,7 @@
     <meta name="msapplication-TileColor" content="#efefef" />
     <meta name="theme-color" content="#ffffff" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@xdesro" />
+    <meta name="twitter:site" content="@404boyfriend" />
     <meta name="twitter:title" content="Stillness.Digital | {{ title or "A Place To Rest" }}" />
     <meta
       name="twitter:image"
