--- a/_includes/base.html
+++ b/_includes/base.html
@@ -29,11 +29,13 @@
     />
     <link rel="manifest" href="/meta/site.webmanifest" />
     <link rel="mask-icon" href="/meta/safari-pinned-tab.svg" color="#030303" />
+    <link rel="me" href="https://front-end.social/@henry">
     <meta name="msapplication-TileColor" content="#efefef" />
     <meta name="theme-color" content="#ffffff" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@404boyfriend" />
     <meta name="twitter:title" content="Stillness.Digital | {{ title or "A Place To Rest" }}" />
+
     <meta
       name="twitter:image"
       content="{{ og or "https://stillness.digital/meta/og.png" }}"
