--- a/og.css
+++ b/og.css
@@ -7,22 +7,24 @@
 }
 
 @font-face {
-  font-family: "DM Mono";
+  font-family: "GT America";
   font-weight: normal;
   font-style: normal;
   font-display: swap;
-  src: url("/dm-mono.woff2");
+  src: url("/gt-america.woff2");
 }
 
 @font-face {
-  font-family: "DM Mono";
+  font-family: "GT America Mono";
   font-weight: normal;
-  font-style: italic;
+  font-style: normal;
   font-display: swap;
-  src: url("/dm-mono-italic.woff2");
+  src: url("/gt-america-mono.woff2");
 }
 
-* {
+*,
+*:before,
+*:after {
   box-sizing: border-box;
 }
 
@@ -31,30 +33,47 @@ body {
   min-height: 100vh;
   margin: 0;
   color: hsl(0, 0%, 1%);
-  background-color: hsl(0, 0%, 96%);
-  background-image: url("/gradient.jpg");
-  background-attachment: fixed;
+  background-color: hsl(30, 12%, 97%);
   background-size: cover;
 
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
 body:before {
   position: absolute;
+  position: fixed;
   z-index: 1;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
-  display: block;
+  overflow: hidden;
+  width: 100vw;
+  height: 100vh;
   content: "";
-  border: 1.5rem solid hsl(0, 0%, 96%);
+  pointer-events: none;
+  border: 1rem solid currentColor;
 }
+
+body:after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 10rem;
+  height: 100vh;
+  content: "";
+  background-image: url('/gradient.jpg');
+  background-attachment: fixed;
+  background-size: cover;
+}
+
 main {
   position: absolute;
-  top: calc(50% - 5rem);
-  left: 4rem;
+  top: calc(50% - 10rem);
+  left: 14rem;
 }
+
 h1 {
   font-family: "Ninna";
   font-size: 5rem;
@@ -64,20 +83,24 @@ h1 {
   margin-top: 0;
   margin-bottom: 0;
   text-transform: uppercase;
-  color: hsl(0, 0%, 96%);
+  color: hsl(0, 0%, 77%);
+
 }
 
 h2 {
-  font-family: "DM Mono";
+  font-family: "GT America Mono";
   font-size: 1.5rem;
   font-weight: normal;
+  max-width: 40ch;
   margin-bottom: 3rem;
-  text-transform: lowercase;
+  text-transform: uppercase;
+  text-wrap: balance;
 }
 
 pre {
-  font-family: "DM Mono";
+  font-family: "GT America";
   font-size: 1.5rem;
+  line-height: 1.5;
   max-width: 50ch;
   height: 10rem;
   margin-top: 0;
