--- a/style.css
+++ b/style.css
@@ -7,22 +7,24 @@
 }
 
 @font-face {
-  font-family: "DM Mono";
+  font-family: "GT America";
   font-weight: normal;
   font-style: normal;
   font-display: swap;
-  src: url("/dm-mono.woff2");
+  src: url("/gt-america.woff2");
 }
 
 @font-face {
-  font-family: "DM Mono";
+  font-family: "GT America Mono";
   font-weight: normal;
-  font-style: italic;
+  font-style: normal;
   font-display: swap;
-  src: url("/dm-mono-italic.woff2");
+  src: url("/gt-america-mono.woff2");
 }
 
-* {
+*,
+*:before,
+*:after {
   box-sizing: border-box;
 }
 
@@ -39,14 +41,27 @@ body {
   padding-top: 8rem;
   padding-bottom: 8rem;
   animation: drift 30s linear infinite;
-  color: hsl(0, 0%, 1%);
-  background-color: hsl(0, 0%, 96%);
-  background-image: url("/gradient.jpg");
-  background-attachment: fixed;
-  background-size: cover;
+  color: #010101;
+  background-color: hsl(30, 12%, 97%);
 
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+body:before {
+  position: absolute;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  overflow: hidden;
+  width: 100vw;
+  height: 100vh;
+  content: "";
+  pointer-events: none;
+  border: .75rem solid currentColor;
 }
 
 @keyframes drift {
@@ -80,13 +95,14 @@ h1:first-letter {
 h1 em {
   font-style: normal;
   font-feature-settings: "ss07", "ss12";
-  color: hsl(0, 0%, 100%);
+  color: hsl(87, 17%, 60%);
 }
 
 a {
   position: relative;
   color: inherit;
 }
+
 .decorated:before {
   position: absolute;
   left: -1.25rem;
@@ -103,7 +119,8 @@ p {
 aside {
   font-size: 4rem;
   font-feature-settings: "ss14";
-  color: hsl(0, 0%, 100%);
+  color: hsl(87, 17%, 60%);
+
 }
 
 main {
@@ -111,25 +128,29 @@ main {
 }
 
 nav {
-  display: none;
-  position: sticky;
-  align-self: start;
-  top: 5rem;
-  font-family: "DM Mono";
+  font-family: "GT America Mono";
   font-size: 0.85rem;
+  position: sticky;
+  top: 5rem;
+  display: none;
+  align-self: start;
 }
-nav > span {
+
+nav>span {
   display: block;
   margin-bottom: 1rem;
 }
-nav > ol {
-  list-style-type: none;
-  padding: 0;
+
+nav>ol {
   margin: 0 0 2rem;
+  padding: 0;
+  list-style-type: none;
 }
+
 nav li {
   margin-bottom: 0.5em;
 }
+
 nav a {
   text-decoration: none;
   opacity: 0.5;
@@ -143,16 +164,18 @@ nav a:active {
 
 nav time {
   margin: 0;
+  text-transform: lowercase;
 }
 
 article {
-  font-family: "DM Mono";
-  font-size: 0.85rem;
-  max-width: 50ch;
+  font-family: "GT America";
+  font-size: 1rem;
+  line-height: 1.5;
+  max-width: 40ch;
   margin-bottom: 3rem;
+  scroll-margin-top: 5rem;
   padding-inline: 1rem;
   text-align: justify;
-  scroll-margin-top: 5rem;
 }
 
 article:not(:last-child):after {
@@ -162,15 +185,19 @@ article:not(:last-child):after {
   display: block;
   content: "&";
   text-align: center;
-  color: hsl(0, 0%, 100%);
+  color: hsl(87, 17%, 60%);
+
 }
 
 time {
-  font-size: 0.85rem;
+  font-family: "GT America Mono";
+  font-size: 0.75rem;
+  line-height: 1.5;
   display: block;
   margin-bottom: 2rem;
   text-align: left;
-  text-transform: lowercase;
+  text-transform: uppercase;
+  text-wrap: balance;
 }
 
 pre {
@@ -180,91 +207,26 @@ pre {
   margin-bottom: 2rem;
   white-space: pre-line;
 }
-pre ~ a {
+
+pre~a {
+  font-family: "GT America Mono";
+  font-size: .75rem;
   display: inline-block;
   margin-bottom: 2rem;
+  text-transform: uppercase;
 }
-pre ~ address {
+
+pre~address {
+  font-family: "GT America Mono";
+  font-size: .75rem;
   display: inline-block;
   margin-bottom: 3rem;
+
 }
-pre ~ address:before {
+
+pre~address:before {
   padding-right: 1.5ch;
   content: "❦";
-}
-
-form {
-  font-family: "DM Mono";
-  font-size: 1.25rem;
-  position: absolute;
-  top: 0;
-  right: 0;
-  left: 0;
-  overflow: hidden;
-  height: 100vh;
-}
-
-textarea {
-  font: inherit;
-  width: 100%;
-  height: 100vh;
-  min-height: 10em;
-  padding: 1.5rem;
-  border: none;
-  outline: none;
-}
-
-label {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
-    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-}
-
-label > div {
-  margin-bottom: 0.5rem;
-}
-
-input {
-  font: inherit;
-  border: none;
-  border-bottom: 1px solid currentColor;
-  border-radius: 0;
-  background-color: transparent;
-}
-
-input:focus {
-  outline: none;
-}
-
-button {
-  font: inherit;
-  font-family: "DM Mono";
-  font-size: 1.25rem;
-  position: absolute;
-  z-index: 2;
-  right: 1.5rem;
-  bottom: 4.5rem;
-  display: block;
-  overflow: hidden;
-  max-width: calc(100vw - 3rem);
-  padding: 0.25rem 0.5rem;
-  cursor: pointer;
-  white-space: nowrap;
-  text-transform: lowercase;
-  text-overflow: ellipsis;
-  color: inherit;
-  border: 1px solid currentColor;
-  background-color: transparent;
-}
-
-button:hover,
-button:active {
-  color: hsl(40, 8%, 71%);
-  border-color: hsl(0, 0%, 1%);
-  background-color: hsl(0, 0%, 1%);
-}
-
-form > button {
-  bottom: 1.5rem;
 }
 
 .secret {
@@ -279,13 +241,44 @@ form > button {
   border: 0;
 }
 
-@media (min-width: 711px) {
+.extended time {
+  max-width: 40ch;
+  text-wrap: balance;
+}
+
+@media (min-width: 955px) {
+
   main.home {
     display: grid;
+    grid-column-gap: 9rem;
     grid-template-columns: 1fr auto 1fr;
-    grid-column-gap: 3rem;
   }
+
   nav {
     display: block;
+  }
+
+  .extended {
+    max-width: calc(80ch + 2rem);
+  }
+
+  .extended pre {
+    gap: 2rem;
+    columns: 2;
+  }
+}
+
+@media (min-width: 1212px) {
+  body:after {
+    position: absolute;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 7.5rem;
+    height: 100vh;
+    content: "";
+    background-image: url('/gradient.jpg');
+    background-attachment: fixed;
+    background-size: cover;
   }
 }
