--- a/_includes/post.html
+++ b/_includes/post.html
@@ -4,9 +4,7 @@ eleventyComputed:
     description: "{{ content | striptags }}"
     title: "{{ page.date | timezonedDate(page.gps) }}"
     date: "{{ page.date | urlDate | slugify }}"
-    generatedOgUrl: "https://screenshot.henry.codes/{{ ('https://stillness.digital/opengraph/posts/' + date) | encodeURIComponent }}/opengraph"
-    manualOgUrl: "https://stillness.digital/img/{{ page.date | urlDate | slugify }}.png"
-    og: "{% if manualOpengraph %}{{ manualOgUrl }}{% else %}{{ generatedOgUrl }}{% endif %}"
+    og: "https://screenshot.henry.codes/{{ ('https://stillness.digital/opengraph/posts/' + date) | encodeURIComponent }}/opengraph"
 ---
 <main>
     <article {% if content.length  > 1100 %}class="extended"{% endif %}>
