--- a/style.css
+++ b/style.css
@@ -33,6 +33,8 @@ html:focus-within {
 }
 
 body {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
   font-family: "Ninna";
   display: grid;
   justify-items: center;
@@ -43,9 +45,6 @@ body {
   animation: drift 30s linear infinite;
   color: #010101;
   background-color: hsl(30, 12%, 97%);
-
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
 body:before {
@@ -138,8 +137,8 @@ nav {
   align-self: start;
   height: 100vh;
   margin-top: -5rem;
-  padding-top: 5rem;
   scrollbar-width: none;
+  padding-top: 5rem;
 }
 
 nav::-webkit-scrollbar {
@@ -218,12 +217,21 @@ pre {
   white-space: pre-line;
 }
 
-pre~a {
+pre~a, article cite {
   font-family: "GT America Mono";
   font-size: .75rem;
+  text-transform: uppercase;
+}
+pre~a {
   display: inline-block;
   margin-bottom: 2rem;
-  text-transform: uppercase;
+}
+article cite {
+  font-style: normal;
+  display: block;
+}
+article cite + .permalink {
+  color: hsl(74, 16%, 39%);
 }
 
 pre~address {
